Update ci_platform_portal_build.sh